	* src/Makefile.in (dep): include SLIBOBJS in dependency check
	* src/SDCCast.c (decorateType): catch another small optimization
	with '?' operator
	* src/SDCCsymt.c (computeType): added comments and cosmetic changes
	* src/SDCCval.c (valMult, valDiv, valMod, valPlus, valMinus, valShift):
	modified to finally use computeType() all over SDCC,
	see Feature Request #877103
	* src/SDCCval.h: cosmetic

2004-02-23 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (decorateType): fixed bug #902362
	* doc/INSTALL.txt: fixed install instructions for win32

2004-02-21 Bernhard Held <bernhard AT bernhardheld.de>

	* device/include/Makefile.in (install): fixed by replacing spaces
	by tabs
	* doc/README.txt,
	* doc/INSTALL.txt: updated for release
	* doc/sdccman.lyx: added warning for --xstack being buggy

2004-02-20 Bernhard Held <bernhard AT bernhardheld.de>

	* src/pic16/ralloc.c (packRegsForAccUse):  disabled functions with #if
	to eliminate build warnings.
	* src/pic16/gen.c (pic16_popGet): fixed for gcc 2.95.4

2004-02-20 Vangelis Rokas <vrokas AT otenet.gr>
	   Hans-Juergen Dorn <hans.dorn AT apl-landau.de>

	* doc/sdccman.lyx: removed PIC16 from PIC16 Port Specific Options,
	removed -penable-stack, added comment for stack pragma, added
	warning for not initializing the stack/frame registers, removed
	comment at interrupts section

	Stack is made permanent, there is no ability to disable stack usage.
	* src/pic16/device.h,
	* src/pic16/device.c: removed all references to USE_STACK macro,
	* src/pic16/device.c (pic16_dump_section): when no elements in
	rlist, free rlist before return,
	* (pic16_dump_int_registers): NEW, internal registers are a new set
	of general purpose registers reused by each function,
	* (checkAddReg): returns 1 if registers is added to set,
	* (pic16_groupRegistersInSection): when a registers is of type
	PO_GPR_TEMP add it in pic16_int_regs and not in pic16_rel_udata,
	* src/pic16/device.h: memRange and Assigned Memory are deleted,